# DXL-TEST

dxl_test_gui/: CMakeLists.txt  mainpage.dox  package.xml
dxl_test_gui/include/dxl_test_gui/: main_window.hpp  qnode.hpp
dxl_test_gui/src/: main.cpp  main_window.cpp  qnode.cpp
dxl_test_gui/ui/: main_window.ui
dxl_test_manager/: CMakeLists.txt  package.xml
dxl_test_manager/config/: DXL_TEST.robot  dxl_init.yaml  offset.yaml
dxl_test_manager/launch/: dxl_test_manager.launch
dxl_test_manager/src/: dxl_test_manager.cpp
dxl_test_module/: CMakeLists.txt  package.xml
dxl_test_module/data/: data.ods  data_1.ods  goal_torque.txt  goal_torque_0.02.ods  goal_torque_0.032.ods  goal_torque_0.035.ods  goal_torque_0.037.ods  goal_torque_0.03_1.ods  goal_torque_0.03_2.ods  goal_torque_0.04.ods  goal_torque_0.042.ods  goal_torque_0.045.ods  goal_torque_0.05.ods  present_torque.txt  present_velocity.txt
dxl_test_module/data/fail_data/: data_1.ods
dxl_test_module/include/dxl_test_module/: test_module.h
dxl_test_module/src/: test_module.cpp
